2006-02-09  Titus Brown  <t@issola.caltech.edu>

	* Added 'equiv-refresh' debug option.

2006-02-08  Titus Brown  <t@issola.caltech.edu>

	* 0.8.3 RELEASE

	* fixed minor links parsing bug (seek(0) prior to parsing!)

	* renamed wwwsearch/ to other_packages/.

	* added BeautifulSoup.

2006-02-06  Titus Brown  <t@issola.caltech.edu>

	* 0.8.2 RELEASE.

	* Documented config options.

	* Added in parse_errors stuff: config parse options now all work.

	* Wedged in all of the mechanize parse Factory refactoring.

	* Refactored a bit to use Factory() amalgamation.  In particular,
	  removed title() override in PatchedMechanizeBrowser; built a
	  Factory subclass in utils; and removed external references to
	  TidyAware code.

2006-02-05  Titus Brown  <t@issola.caltech.edu>

	* Added 'set_output' command to redirect all output elsewhere.

	* Updated pyparsing to 1.4.1.

2006-02-04  Titus Brown  <t@issola.caltech.edu>

	* added execute_string.

	* Updated wsgi_intercept to latest (non-caching) version.

	* Removed test-wsgi-intercept code.

2006-02-01  Titus Brown  <t@issola.caltech.edu>

	* Added ignore_errors functioning into wwwsearch code; now, when
	  ignore_errors=True on form parsing, parse errors are ignored.

	* Renamed 'do_run_tidy' to 'use_tidy', and 'tidy_should_exist' to
	  'require_tidy'.

	* Fixed redirect error once and for all by switching to using the
	  *correct* Request class.

2006-01-23  Titus Brown  <t@issola.caltech.edu>

	* Added extensions/ __init__.py

	* Removed special setup cmdclass.

2006-01-22  Titus Brown  <t@issola.caltech.edu>

	* Removed space mangling in favor of JJL's fix in mechanize.

	* Fixed multiple 'showlinks' problem (in _mechanize.py).

	* Catch all parsing exceptions. (Kieran Holland)

	* Added return values to a number of functions in commands.py,
	  documented appropriately.

	* Added '?' behavior for 'go', so that 'go ?name=value' works.
	  (Sebastjan Trepca)

	* Updated pyparsing to 1.4p1 version.
